# QuickWidgetPlayer

./: CMakeLists.txt  QuickWidgetPlayer.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.qrc
